# fraud-mlops-control-tower

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  portfolio-content-validation.yml
data/: README.md
docs/: PORTFOLIO_LAYER.md  README.md  REPOSITORY_STANDARD.md  VALIDATION.md  data_card.md  deployment_runbook.md  local_run_report.md  model_card.md  monitoring_plan.md  public_safety.md  risk_assessment.md  screenshots.md  threshold_policy.md
docs/screenshots/: validation-output.html
examples/: sample_prediction_payload.json  sample_prediction_response.json
notebooks/: README.md
src/fraud_mlops/: __init__.py  api.py  config.py  drift_detection.py  evaluate.py  features.py  generate_synthetic_risk_data.py  monitor.py  train.py
tests/: test_api_schema.py  test_drift_detection.py  test_features.py  test_monitor.py  test_synthetic_data.py
