[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-mlops-control-tower"
version = "0.1.0"
description = "Synthetic risk/anomaly analytics project with MLOps, serving and governance documentation."
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "mlflow",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
